# open-adt

./: .ghci  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  doc-index.html  index.html  open-adt.cabal  stack.yaml
StateVar-1.1.1.1/: Data-StateVar.html  StateVar.haddock  StateVar.txt  doc-index.html  doc-index.json  index.html
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  (+9 more)
array-0.5.2.0/: Data-Array-IArray.html  Data-Array-IO-Safe.html  Data-Array-IO.html  Data-Array-MArray-Safe.html  Data-Array-MArray.html  Data-Array-ST-Safe.html  Data-Array-ST.html  Data-Array-Storable-Safe.html  Data-Array-Storable.html  Data-Array-Unboxed.html  Data-Array-Unsafe.html  Data-Array.html
base-4.11.1.0/: Control-Applicative.html  Control-Arrow.html  Control-Category.html  Control-Concurrent-Chan.html  Control-Concurrent.html  (+158 more)
open-adt-tutorial/: .ghci  open-adt-tutorial.cabal  shell.nix
open-adt-tutorial/lib/Data/OpenADT/: Tutorial.hs
open-adt-tutorial/src/: Main.hs
(+908 files in other folders)
